...
        android:textColor="@color/white"
        android:id="@+id/btn_editScreen"
        android:textSize="10sp"
        />

    <Button
        android:id="@+id/btnLogOutVet"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="#A61717"
        android:text="Log Out"
        android:textSize="10sp" />


</LinearLayout>
